--- a/index.html
+++ b/index.html
@@ -4,51 +4,52 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Change.Creditcard – Change Card Settings, Limits & Features</title>
-  <meta name="description" content="Change.creditcard explains how to change credit-card settings: limits, features, upgrades, downgrades, security controls and product changes." />
+  <title>Change.Creditcard – How to Change, Upgrade or Downgrade Credit Cards</title>
+  <meta name="description" content="Neutral guide to changing credit cards: product changes, upgrades, downgrades, closing cards and avoiding mistakes that can hurt your credit profile or rewards." />
   <meta name="robots" content="index,follow" />
   <link rel="canonical" href="https://change.creditcard/" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Change.Creditcard – Changing Card Settings & Products" />
-  <meta property="og:description" content="Learn how to safely change card limits, features, products and security settings without breaking your credit profile." />
+  <meta property="og:title" content="Change.Creditcard – Changing, Upgrading & Downgrading Credit Cards" />
+  <meta property="og:description" content="Independent explanation of how to change, upgrade or downgrade credit cards, preserve rewards and minimize impact on your credit profile." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://change.creditcard/" />
   <meta property="og:image" content="https://choose.creditcard/preview.png?utm_source=change.creditcard&utm_medium=referral&utm_campaign=og_image" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Change.Creditcard – Change Card Limits & Features" />
-  <meta name="twitter:description" content="Independent guide to changing card settings, limits, features and products." />
+  <meta name="twitter:title" content="Change.Creditcard – Changing, Upgrading & Downgrading Credit Cards" />
+  <meta name="twitter:description" content="Learn how card changes really work: product changes vs new applications, when to close cards, and how to handle rewards, fees and limits." />
   <meta name="twitter:image" content="https://choose.creditcard/preview.png?utm_source=change.creditcard&utm_medium=referral&utm_campaign=twitter_image" />
 
   <!-- GA4 -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-64FE63JQ3H"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){ dataLayer.push(arguments); }
+    function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'G-64FE63JQ3H');
   </script>
 
+  <!-- Tailwind for utility classes -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Your shared minisite styles -->
   <link rel="stylesheet" href="./styles.css" />
 </head>
-
 <body class="bg-slate-950 text-slate-100">
-
   <header class="site-header">
     <div class="nav-inner max-w-6xl">
       <div class="brand">
         <div class="cc-logo">CC</div>
         <div class="brand-text">
           <div class="brand-title">Change.Creditcard</div>
-          <div class="brand-subtitle">Change Limits, Settings & Products</div>
+          <div class="brand-subtitle">Changing, Upgrading & Downgrading Cards</div>
         </div>
       </div>
-
-      <nav class="nav-links">
+      <nav class="nav-links" aria-label="Page navigation">
         <a href="#overview">Overview</a>
-        <a href="#settings">Settings</a>
+        <a href="#mechanics">How It Works</a>
         <a href="#compare">Compare</a>
       </nav>
     </div>
@@ -59,188 +60,159 @@
     <div class="cc-breadcrumb">
       <a href="https://choose.creditcard/?utm_source=change.creditcard&utm_medium=referral&utm_campaign=breadcrumb">Home</a>
       &nbsp;›&nbsp;
-      Change Card Settings
+      Change.Creditcard
     </div>
 
     <!-- Hero -->
     <section class="hero">
-      <h1>How to Change Your Card Without Making a Mess</h1>
-      <p class="hero-lead">
-        Change.Creditcard explains product changes, limit adjustments, feature toggles and security settings — so you can update your card setup without surprises.
-      </p>
-
-      <a class="cta" href="https://choose.creditcard/?utm_source=change.creditcard&utm_medium=referral&utm_campaign=hero_cta">
-        Compare cards before you change
-      </a>
+      <div class="hero-content">
+        <h1>How to Change Credit Cards Without Unwanted Side Effects</h1>
+        <p class="hero-lead">
+          Changing cards can mean upgrading, downgrading, switching products or closing accounts. This page explains the main paths, how they affect fees, rewards and your credit profile, and what to check before you request a change.
+        </p>
+        <a class="cta" href="https://choose.creditcard/?utm_source=change.creditcard&utm_medium=referral&utm_campaign=hero_cta">
+          Explore card-change options at Choose.Creditcard
+        </a>
+      </div>
     </section>
 
-    <!-- Sections -->
+    <!-- Content sections -->
     <section id="overview" class="section">
-      <h2>Types of Changes You Can Make</h2>
-      <p>You usually have more flexibility than you think. Common change types include:</p>
-
-      <ul class="list">
-        <li>Changing credit limits up or down</li>
-        <li>Upgrading or downgrading to another card from the same issuer</li>
-        <li>Switching from rewards focus to low-interest or vice versa</li>
-        <li>Turning on/off specific features (contactless, online use, foreign use)</li>
-        <li>Changing billing dates and payment methods</li>
-      </ul>
-
-      <p>Some changes are instant in the app. Others require a manual review or new agreement.</p>
+      <h2>What Does “Changing a Credit Card” Actually Mean?</h2>
+      <p>“Changing” a card can refer to several different actions: asking for a product change within the same issuer, upgrading to a more premium card, downgrading to a lower-fee card or closing an account entirely. Each path has different implications for fees, benefits and account history.</p>
+      <p>Issuers often use their own terminology, but the core question is the same: will your existing account continue with new terms, or will a brand-new account be opened and the old one closed? Understanding that distinction is key to predicting how a change might affect your credit file and rewards.</p>
     </section>
 
-    <section id="settings" class="section">
-      <h2>Safety First: Limit & Security Changes</h2>
-      <p>Security-related settings are often available directly in the issuer app:</p>
-
-      <ul class="list">
-        <li>Freeze/unfreeze card in seconds</li>
-        <li>Block online transactions temporarily</li>
-        <li>Block foreign or offline transactions</li>
-        <li>Set custom spending limits per day or per transaction</li>
-        <li>Enable alerts for every purchase or only above a threshold</li>
-      </ul>
-
-      <p>Using these settings actively can prevent fraud and keep your spending under control.</p>
+    <section id="mechanics" class="section">
+      <h2>Product Changes vs New Applications</h2>
+      <p>With a product change, your existing account number typically stays the same while the underlying card product changes. This can preserve your account age and history while adjusting annual fees, benefits or earn structure. Issuers may restrict which products you can move between and how often changes are allowed.</p>
+      <p>Opening a new card, on the other hand, usually involves a fresh credit check and a new account line. The old card may remain open or be closed later at your request. New applications can unlock welcome bonuses, but they also add to the number of hard inquiries and active accounts on your file.</p>
     </section>
 
     <section class="section">
-      <h2>Product Changes: Upgrade or Downgrade</h2>
-      <p>Instead of cancelling a card, many issuers allow “product changes” inside the same family:</p>
-
-      <ul class="list">
-        <li>Move from a no-fee card to a premium rewards card</li>
-        <li>Downgrade from a high-fee card to a cheaper option</li>
-        <li>Switch from cashback to points/miles or the other way around</li>
-      </ul>
-
-      <p>This can preserve your account age and sometimes your credit limit, which may benefit your overall credit profile.</p>
+      <h2>How Card Changes Affect Rewards and Benefits</h2>
+      <p>When you upgrade or downgrade, your earn rates, bonus categories and benefits may change immediately or at the start of a new statement cycle. Some programs allow you to keep existing points under the same umbrella, while others may convert, restrict or even forfeit certain rewards on change.</p>
+      <p>Benefits like lounge access, insurance coverage and statement credits are tied to the product you hold at a given time. After a change, you may lose some benefits and gain others, so it is important to understand the new package before confirming the switch.</p>
     </section>
 
     <section class="section">
-      <h2>When to Consider Changing Cards</h2>
-      <p>Change might make sense when:</p>
-
-      <ul class="list">
-        <li>Your spending habits have shifted (e.g. more travel, less commuting)</li>
-        <li>Annual fee no longer matches the value you get</li>
-        <li>You no longer use the main reward category</li>
-        <li>You want better digital features, not just better points</li>
-      </ul>
-
-      <p>Before changing, compare the new product against alternatives in the market — not just within the same bank.</p>
+      <h2>Closing Cards, Annual Fees and Retention Offers</h2>
+      <p>Closing a card can simplify your wallet and reduce annual fees, but it may also reduce your total available credit and remove an aged account from your profile after some time. Both effects can influence how your credit score responds in the medium term.</p>
+      <p>Before closing, issuers sometimes offer retention incentives such as statement credits, reduced fees or bonus points in exchange for keeping the card. Evaluating these offers against your actual usage helps you decide whether to accept, downgrade or proceed with cancellation.</p>
     </section>
 
-    <!-- Comparison Table -->
+    <section class="section">
+      <h2>Practical Steps Before You Request a Change</h2>
+      <p>Before making a change, it can be helpful to redeem vulnerable rewards, move points to more stable ecosystems if allowed, and review any pending statements or refunds. Verifying recurring payments and subscriptions linked to the card reduces the risk of missed charges during the transition.</p>
+      <p>It is also worth checking how the change might affect promotional rates, balance transfer terms or installment plans. In some cases, product changes may end intro offers or alter fees in ways that only show up on future statements.</p>
+    </section>
+
+    <!-- Comparison block -->
     <section id="compare" class="section">
-      <h2>Comparing Change Options</h2>
-
+      <h2>Compare Your Options Before Changing Cards</h2>
       <div class="table-wrap">
         <table class="table">
           <thead>
             <tr>
-              <th>Change Type</th>
-              <th>Pros</th>
-              <th>Watch Out For</th>
+              <th>Decision Area</th>
+              <th>What to Review</th>
+              <th>Why It Matters</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>Limit Increase</td>
-              <td>More flexibility, lower utilization</td>
-              <td>Risk of overspending if not controlled</td>
+              <td>Fees &amp; Costs</td>
+              <td>Current vs new annual fee, FX fees, extra card fees</td>
+              <td>Shows whether the change will reduce or increase your yearly cost.</td>
             </tr>
             <tr>
-              <td>Limit Decrease</td>
-              <td>Helps self-control, risk management</td>
-              <td>Higher utilization ratio if balance stays same</td>
+              <td>Rewards Structure</td>
+              <td>Earn rates, categories, caps and expiry rules</td>
+              <td>Determines if the new card still fits your spending pattern.</td>
             </tr>
             <tr>
-              <td>Product Upgrade</td>
-              <td>More rewards & benefits</td>
-              <td>Higher annual fee or stricter conditions</td>
+              <td>Benefits &amp; Protections</td>
+              <td>Lounge access, insurance, credits and purchase coverage</td>
+              <td>Helps you avoid losing protections you rely on, or gain ones you need.</td>
             </tr>
             <tr>
-              <td>Product Downgrade</td>
-              <td>Lower or no annual fee</td>
-              <td>Possible loss of perks or insurances</td>
+              <td>Credit Profile Impact</td>
+              <td>Account age, credit limits, utilization, inquiries</td>
+              <td>Important for maintaining a stable credit profile over time.</td>
             </tr>
             <tr>
-              <td>Closing Card</td>
-              <td>Reduces total credit exposure</td>
-              <td>Potential negative impact on credit history</td>
+              <td>Timing &amp; Transition</td>
+              <td>Statement dates, bonus periods, pending refunds</td>
+              <td>Reduces surprises around fees, interest and reward posting.</td>
             </tr>
           </tbody>
         </table>
       </div>
-
       <p class="small">
-        Before you change, compare alternative cards and products at  
+        For live product-by-product comparisons and alternative options, visit
         <a href="https://choose.creditcard/?utm_source=change.creditcard&utm_medium=referral&utm_campaign=comparison_section">
           Choose.Creditcard
         </a>.
       </p>
     </section>
 
-    <!-- Cluster Links -->
+    <!-- Cluster links -->
     <section class="section">
-      <h2>Explore Related Loyalty & Benefit Microsites</h2>
-
+      <h2>Explore Related Card Decisions</h2>
       <div class="cluster-grid">
+        <a class="cluster-card" href="https://compare.creditcard/?utm_source=change.creditcard&utm_medium=referral&utm_campaign=cluster_compare">
+          <h3>Compare.Creditcard</h3>
+          <p>Side-by-side comparisons when considering a new card.</p>
+        </a>
         <a class="cluster-card" href="https://benefits.creditcard/?utm_source=change.creditcard&utm_medium=referral&utm_campaign=cluster_benefits">
           <h3>Benefits.Creditcard</h3>
-          <p>Understand the perks you might gain or lose when changing cards.</p>
+          <p>Review premium perks before upgrading or downgrading.</p>
         </a>
-
-        <a class="cluster-card" href="https://loyalty.creditcard/?utm_source=change.creditcard&utm_medium=referral&utm_campaign=cluster_loyalty">
-          <h3>Loyalty.Creditcard</h3>
-          <p>See how changes affect loyalty tiers and long-term status.</p>
-        </a>
-
         <a class="cluster-card" href="https://rewards.creditcard/?utm_source=change.creditcard&utm_medium=referral&utm_campaign=cluster_rewards">
           <h3>Rewards.Creditcard</h3>
-          <p>Compare different reward systems before switching.</p>
+          <p>Understand how new cards might change your reward mix.</p>
         </a>
-
-        <a class="cluster-card" href="https://earn.creditcard/?utm_source=change.creditcard&utm_medium=referral&utm_campaign=cluster_earn">
-          <h3>Earn.Creditcard</h3>
-          <p>See how earn rates change with different products.</p>
+        <a class="cluster-card" href="https://loyalty.creditcard/?utm_source=change.creditcard&utm_medium=referral&utm_campaign=cluster_loyalty">
+          <h3>Loyalty.Creditcard</h3>
+          <p>See how card changes interact with loyalty status and tiers.</p>
         </a>
-
-        <a class="cluster-card" href="https://member.creditcard/?utm_source=change.creditcard&utm_medium=referral&utm_campaign=cluster_member">
-          <h3>Member.Creditcard</h3>
-          <p>Membership-focused benefits and ongoing relationship value.</p>
+        <a class="cluster-card" href="https://credit-score.creditcard/?utm_source=change.creditcard&utm_medium=referral&utm_campaign=cluster_credit_score">
+          <h3>Credit-Score.Creditcard</h3>
+          <p>Learn how card openings and closures influence your score.</p>
         </a>
       </div>
     </section>
 
-    <!-- Collection Section -->
+    <!-- Collection section -->
     <section class="section">
       <h2>Part of The CreditCard Collection</h2>
       <p class="small">
-        Change.Creditcard is the “card changes & product switch” spoke in <strong>The CreditCard Collection</strong>, operated by ronarn AS.
+        Change.Creditcard is one spoke in <strong>The CreditCard Collection</strong> — a network of focused microsites operated by ronarn AS. Each site explains a specific aspect of credit-card usage and then connects you to independent comparison tools.
       </p>
       <p class="small">
-        We focus on neutral, documentation-based explanations of what happens when you change your card or its settings.
+        We do not issue cards or provide personalized recommendations. Content here is based on public documentation and aims to help you ask better questions when speaking with issuers or advisors about changing cards.
       </p>
       <p class="small">
-        For unbiased product comparisons, visit  
-        <a href="https://choose.creditcard/?utm_source=change.creditcard&utm_medium=referral&utm_campaign=collection_section">
-          Choose.Creditcard
-        </a>.
+        Nothing on this page is financial, legal or credit advice. Rules and policies vary by issuer and jurisdiction, so always confirm details directly with your card provider before making changes.
       </p>
+
+      <!-- REQUIRED HUB SNIPPET – mapped to root -->
+      <div class="hub-link">
+        <a href="https://choose.creditcard/?utm_source=change.creditcard&utm_medium=referral&utm_campaign=minisite_to_hub"
+           class="text-sm text-slate-600 hover:text-slate-900">
+          Learn more at the Comparison hub
+        </a>
+      </div>
     </section>
 
     <!-- Bottom CTA -->
     <section class="section">
-      <h2>Ready to Change Your Card Setup?</h2>
+      <h2>Ready to Plan Your Next Card Change?</h2>
       <p class="small">
-        Use Change.Creditcard to understand your options — then compare real products to decide whether to tweak, switch or upgrade.
+        Use Change.Creditcard to understand the moving pieces, then visit the main comparison hub to explore cards that may be better aligned with your fees, benefits and reward goals.
       </p>
-
       <a class="cta" href="https://choose.creditcard/?utm_source=change.creditcard&utm_medium=referral&utm_campaign=bottom_cta">
-        Compare options before you change
+        Go to Choose.Creditcard
       </a>
     </section>
   </main>
@@ -251,6 +223,5 @@
       Contact: <a href="mailto:support@cc.creditcard">support@cc.creditcard</a>
     </p>
   </footer>
-
 </body>
 </html>
